<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:orientation="horizontal"
	android:id="@+id/info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_weight="0"
    	android:background="@drawable/rectangle_rouge"
    	android:layout_width="75dp"
    	android:layout_height="match_parent">
	    <Button
    	    android:id="@+id/button1"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son1" />
	    <Button
        	android:id="@+id/button2"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son2" />
    	<Button
        	android:id="@+id/button3"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son3" />
    	<Button
        	android:id="@+id/button4"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son4" />
    	<Button
        	android:id="@+id/button5"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son5" />
    	<Button
        	android:id="@+id/button6"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son6" />
    	<Button
        	android:id="@+id/button7"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son7" />
    	<Button
        	android:id="@+id/button8"
    	    android:layout_weight="1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/son8" />
   	</LinearLayout>
    	
    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/gridV1"
    		android:layout_weight="1"
    		android:numColumns="4"
   			android:gravity="fill"
   			android:columnWidth="125dp"
    		android:stretchMode="columnWidth"
    		android:layout_width="500dp"
    		android:layout_height="fill_parent" >
	</GridView>
    	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_weight="0"
	    android:orientation="vertical"
	  	android:background="@drawable/rectangle_vert"
    	android:layout_width="75dp"
    	android:layout_height="match_parent">
	    <Button
        	android:id="@+id/ButtonSave"
    	    android:layout_weight="1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/save" />
    	<Button
    	    android:id="@+id/Buttonplay"
    	    android:layout_weight="1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/play" />
	    </LinearLayout>
</LinearLayout>

